# ktv-player

./: .coverage  .gitignore  README.md  main.py  plan.txt  pyproject.toml
.github/workflows/: build-all.yml  deploy-pages.yml
apk/: KTV.apk.sha1  ktv-arm64-v8a.apk.sha1  ktv-armeabi-v7a.apk.sha1  ktv-x86_64.apk.sha1  ktv.apk.sha1
components/ui/: glass_container.py  shimmer_loader.py
configs/: config_a.json  config_b.json  config_c.json
core/: state.py  theme.py
database/: manager.py
dl/: ktv-arm64-v8a.apk.sha1  ktv-armeabi-v7a.apk.sha1  ktv-x86_64.apk.sha1  ktv.apk.sha1
scratch/: check_alignment.py  test_imports.py
services/: ad_service.py  iptv_service.py  lifecycle.py
src/: main.py
src/channels/: base.py  provider.py
src/channels/data/: albania.py  andorra.py  argentina.py  armenia.py  australia.py  austria.py  azerbaijan.py  belarus.py  belgium.py  bosnia_and_herzegovina.py  brazil.py  bulgaria.py  canada.py  chad.py  chile.py  china.py  costa_rica.py  croatia.py  cyprus.py  czech_republic.py  denmark.py  dominican_republic.py  egypt.py  estonia.py  faroe_islands.py  finland.py  france.py  georgia.py  germany.py  greece.py  greenland.py  hong_kong.py  hungary.py  iceland.py  india.py  indonesia.py  iran.py  iraq.py  ireland.py  israel.py  (+52 more)
src/components/player/: __init__.py  immersive_player.py
src/components/ui/: __init__.py  channel_grid.py  glass_container.py  shimmer_loader.py
src/core/: constants.py  crash_reporter.py  focus_manager.py  logging_config.py  state.py  theme.py  utils.py
src/database/: manager.py
src/services/: ad_service.py  http_client.py  iptv_service.py  lifecycle.py  liveliness.py  liveliness_checker.py  local_scanner.py  logo_cache.py  m3u_parser.py
src/views/: dashboard.py  local_view.py  onboarding.py  player_view.py  splash.py
src/views/tabs/: __init__.py  categories_tab.py  channel_groups.py  countries_tab.py  custom_tab.py  local_tab.py  pagination.py  preferences_tab.py
tests/: conftest.py  test_ad_manager.py  test_channels.py  test_components.py  test_dashboard_logic.py  test_dashboard_view.py  test_database.py  test_database_extended.py  test_focus_manager.py  test_iptv.py  test_iptv_extended.py  test_lifecycle.py  test_liveliness.py  test_local_scanner.py  test_logo_cache.py  test_m3u_parser.py  test_main.py  test_onboarding_view.py  test_player_view.py  test_splash.py  test_state.py  test_theme.py  test_url_validator.py  test_utils.py
views/: dashboard.py  splash.py
web/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.mjs  manifest.json  version.json
web/assets/: NOTICES
web/assets/app/: app.zip.hash
