[project]
name = "ktv"
version = "1.1.0"
description = "A lightning-fast TV player and local media player built for seamless network streaming and custom channel addition."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "flet==0.85.0",
    "flet-ads==0.85.0",
    "flet-video==0.85.0",
    "flet-permission-handler==0.85.0",
    "httpx>=0.28.1",
]

[tool.flet]
org = "ng.kiri"
product = "KTV Player"
build_number = 4

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "ng.kiri.ktvplayer"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~8438792639"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_AUDIO" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = false

# --- Android TV Home Screen Launcher ---
[[tool.flet.android.manifest_intent_filters]]
action = "android.intent.action.MAIN"
category = ["android.intent.category.LEANBACK_LAUNCHER"]

# --- Custom App Links (ktv://play) ---
[[tool.flet.android.manifest_intent_filters]]
action = "android.intent.action.VIEW"
category = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]
data_scheme = "ktv"
data_host = "play"

# --- Handle ALL Local Video Files (content:// and file://) ---
[[tool.flet.android.manifest_intent_filters]]
action = "android.intent.action.VIEW"
category = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]
data_scheme = "content"
data_mime_type = "video/*"

[[tool.flet.android.manifest_intent_filters]]
action = "android.intent.action.VIEW"
category = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]
data_scheme = "file"
data_mime_type = "video/*"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["src"]