[project]
name = "ktv"
version = "1.2.0"
description = "A lightning-fast TV player built for seamless network streaming and custom channel addition."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "flet==0.85.0",
    "flet-ads==0.85.0",
    "flet-permission-handler>=0.85.0",
    "flet-video==0.85.0",
    "httpx>=0.28.1",
]

[tool.flet]
org = "ng.kiri"
product = "KTV Player"
build_number = 5

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "ng.kiri.ktvplayer"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"
requestLegacyExternalStorage = "true"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~8438792639"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_VISUAL_USER_SELECTED" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = false

[tool.flet.deep_linking]
scheme = "ktv"
host = "play"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
