[project]
name = "ktv"
version = "1.3.1"
description = "A lightning-fast TV player built for seamless network streaming and custom channel addition."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "flet==0.85.0",
    "flet-ads==0.85.0",
    "flet-permission-handler>=0.85.0",
    "flet-video==0.85.0",
    "httpx>=0.28.1",
]

[tool.flet]
org = "ng.kiri"
product = "KTV Player"
build_number = 6

[tool.flet.app]
path = "src"

[tool.flet.android]
bundle_id = "ng.kiri.ktvplayer"

[tool.flet.android.manifest_application]
usesCleartextTraffic = "true"
requestLegacyExternalStorage = "true"

[tool.flet.android.meta_data]
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-5679949845754640~8438792639"

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_NETWORK_STATE" = true
"android.permission.WAKE_LOCK" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.READ_MEDIA_VISUAL_USER_SELECTED" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

[tool.flet.android.feature]
"android.software.leanback" = false
"android.hardware.touchscreen" = false

[tool.flet.deep_linking]
scheme = "ktv"
host = "play"

[tool.flet.splash]
color = "#F5F7FB"
dark_color = "#0D0F1A"

# IMPORTANT: This APK MUST be built with the following flags to ensure
# the Android intent filter is generated in AndroidManifest.xml:
#
#   flet build apk --deep-linking-scheme "ktv" --deep-linking-host "play"
#
# Also include when building AAB for Play Store:
#
#   flet build aab --deep-linking-scheme "ktv" --deep-linking-host "play"
#
# Without these flags, other apps (Nkiri TV, AnimePahe TV, LiveScore TV)
# will be unable to launch KTV Player via ktv:// deep links. After building,
# verify intent-filter exists in the generated AndroidManifest.xml:
#
#   <intent-filter>
#       <action android:name="android.intent.action.VIEW" />
#       <category android:name="android.intent.category.DEFAULT" />
#       <category android:name="android.intent.category.BROWSABLE" />
#       <data android:scheme="ktv" android:host="play" />
#   </intent-filter>

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
